--- a/krb5.conf
+++ b/krb5.conf
@@ -18,7 +18,7 @@
 # old versions of Sun Java).
 
 #       default_tgs_enctypes = des3-hmac-sha1
-#       default_tkt_enctypes = des3-hmac-sha1
+##       default_tkt_enctypes = des3-hmac-sha1
 #       permitted_enctypes = des3-hmac-sha1
 
 # The following libdefaults parameters are only for Heimdal Kerberos.
