--- a/krb5.conf
+++ b/krb5.conf
@@ -27,8 +27,8 @@
 [realms]
         CARNIVALUK.COM = {
                 kdc = cuk-sou-dc16.carnivaluk.com
+                kdc = cuk-sou-dc17.carnivaluk.com
         }
         
 [domain_realm]
         .carnivaluk.com = CARNIVALUK.COM
-        carnivaluk.com = CARNIVALUK.COM
